--- a/HotelRoomBookingService/appsettings.json
+++ b/HotelRoomBookingService/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
 
-    "HotelConnectionString": "server=localhost;database=HotelRoomBookingDB;trusted_connection=yes"
+    "HotelConnectionString": "server=TRD-503;database=HotelRoomBookingDB;trusted_connection=yes"
   },
   "Logging": {
     "LogLevel": {
