--- a/HotelRoomBookingApplication/HotelRoomBookingApplication.csproj
+++ b/HotelRoomBookingApplication/HotelRoomBookingApplication.csproj
@@ -26,4 +26,10 @@
     <ProjectReference Include="..\HotelRoomBookingService\HotelRoomBookingService.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Shared\_LayoutLogout.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
+
 </Project>
